[macOS] Deadlock in SunToolKit.realSync()

XMLWordPrintable

    • b22
    • generic
    • os_x

        To reproduce run regression test closed/javax/swing/DataTransfer/DefaultNoDrop/DefaultNoDrop.java

        Threads:

        Reference Handler
        java.lang.Object.wait(Native Method)
        java.lang.Object.wait(Object.java:503)
        java.lang.ref.Reference$ReferenceHandler.run(Reference.java:133)
        Thread-4
        sun.lwawt.macosx.CDragSourceContextPeer.doDragging(Native Method)
        sun.lwawt.macosx.CDragSourceContextPeer.access$100(CDragSourceContextPeer.java:45)
        sun.lwawt.macosx.CDragSourceContextPeer$1.run(CDragSourceContextPeer.java:187)
        Thread-3
        sun.lwawt.macosx.LWCToolkit.nativeSyncQueue(Native Method)
        sun.lwawt.macosx.LWCToolkit.syncNativeQueue(LWCToolkit.java:345)
        sun.awt.SunToolkit.realSync(SunToolkit.java:1569)
        sun.awt.SunToolkit.realSync(SunToolkit.java:1501)
        SwingTestHelper.waitForEDTToFinish(SwingTestHelper.java:604)
        SwingTestHelper.controlLoop(SwingTestHelper.java:575)
        SwingTestHelper.access$700(SwingTestHelper.java:173)
        SwingTestHelper$4.run(SwingTestHelper.java:497)
        java.lang.Thread.run(Thread.java:722)
        MainThread
        java.lang.Object.wait(Native Method)
        java.lang.Object.wait(Object.java:503)
        SwingTestHelper.run(SwingTestHelper.java:446)
        DefaultNoDrop.main(DefaultNoDrop.java:59)
        sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
        sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        java.lang.reflect.Method.invoke(Method.java:601)
        com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
        java.lang.Thread.run(Thread.java:722)
        Java2D Queue Flusher
        java.lang.Object.wait(Native Method)
        sun.java2d.opengl.OGLRenderQueue$QueueFlusher.run(OGLRenderQueue.java:208)
        AWT-EventQueue-0
        sun.misc.Unsafe.park(Native Method)
        java.util.concurrent.locks.LockSupport.park(LockSupport.java:186)
        java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionObject.await(AbstractQueuedSynchronizer.java:2043)
        java.awt.EventQueue.getNextEvent(EventQueue.java:511)
        java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:213)
        java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:163)
        java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:151)
        java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:147)
        java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:139)
        java.awt.EventDispatchThread.run(EventDispatchThread.java:97)
        AppKit Thread
        java.lang.Object.wait(Native Method)
        java.lang.ref.ReferenceQueue.remove(ReferenceQueue.java:135)
        java.lang.ref.ReferenceQueue.remove(ReferenceQueue.java:151)
        java.lang.ref.Finalizer$FinalizerThread.run(Finalizer.java:177)
        AWT-Shutdown
        java.lang.Object.wait(Native Method)
        java.lang.Object.wait(Object.java:503)
        sun.awt.AWTAutoShutdown.run(AWTAutoShutdown.java:287)
        java.lang.Thread.run(Thread.java:722)
        TimerQueue
        sun.misc.Unsafe.park(Native Method)
        java.util.concurrent.locks.LockSupport.parkNanos(LockSupport.java:226)
        java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionObject.awaitNanos(AbstractQueuedSynchronizer.java:2082)
        java.util.concurrent.DelayQueue.take(DelayQueue.java:220)
        javax.swing.TimerQueue.run(TimerQueue.java:171)
        java.lang.Thread.run(Thread.java:722)
        main
        java.lang.Object.wait(Native Method)
        java.lang.Thread.join(Thread.java:1258)
        java.lang.Thread.join(Thread.java:1332)
        com.sun.javatest.regtest.MainWrapper.main(MainWrapper.java:71)
        Java2D Disposer
        java.lang.Object.wait(Native Method)
        java.lang.ref.ReferenceQueue.remove(ReferenceQueue.java:135)
        java.lang.ref.ReferenceQueue.remove(ReferenceQueue.java:151)
        sun.java2d.Disposer.run(Disposer.java:145)
        java.lang.Thread.run(Thread.java:722)

              Assignee:
              Sergey Bylokhov
              Reporter:
              Petrov Alexander (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: