7185258: [macosx] Deadlock in SunToolKit.realSync()

Reviewed-by: prr