src/java.desktop/share/classes/sun/awt/dnd/SunDragSourceContextPeer.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2014, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2000, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -74,8 +74,8 @@ public abstract class SunDragSourceContextPeer implements DragSourceContextPeer 
     private DragSourceContext dragSourceContext;
     private int               sourceActions;
 
-    private static boolean    dragDropInProgress = false;
-    private static boolean    discardingMouseEvents = false;
+    private static volatile boolean dragDropInProgress = false;
+    private static boolean discardingMouseEvents = false;
 
     /*
      * dispatch constants
@@ -379,6 +379,10 @@ public abstract class SunDragSourceContextPeer implements DragSourceContextPeer 
         if (dragDropInProgress) {
             throw new InvalidDnDOperationException(getExceptionMessage(true));
         }
+    }
+
+    public static boolean isDragDropInProgress() {
+        return dragDropInProgress;
     }
 
     private static String getExceptionMessage(boolean b) {
